--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,8 +7,8 @@
     }
 
     html, body {
-        height: 100vh;
-        width: 100vh;
+        height: 100%;
+        width: 100%;
         background-color: black;
     }
     body {
@@ -32,3 +32,24 @@
         background-color: blue;
         background: url('../imagens/frame-iphone.png');
     }
+    iframe#tela {
+        position: relative;
+        top: 80px;
+        left: 22px;
+        width: 267px;
+        height: 471px;
+    }
+    ::-webkit-scrollbar {
+        width: 0px;
+        padding: 0px;}
+
+    section#redes-sociais img {
+        width: 50px;
+        margin: 10px;
+        border-radius: 50%;
+        box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.701);
+        
+ }
+ section#redes-sociais img:hover {
+    border: 2px solid rgba(168, 164, 164, 0.456);
+ }
